--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "busca-cep": "^0.5.0",
+    "dotenv": "^16.4.5",
     "flowbite-react": "^0.10.2",
     "lucide-react": "^0.456.0",
     "mysql2": "^3.11.4",
