--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "axios": "^1.7.8",
     "busca-cep": "^0.5.0",
     "dotenv": "^16.4.5",
     "flowbite-react": "^0.10.2",
